--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-formtools==2.0
 django-import-export==0.5.1
 django-pure-pagination==0.3.0
 django-simple-captcha==0.4.6
+DjangoUeditor==1.8.143
 et-xmlfile==1.0.1
 future==0.16.0
 httplib2==0.9.2
