--- a/docker/django-uwsgi-nginx/uwsgi.ini
+++ b/docker/django-uwsgi-nginx/uwsgi.ini
@@ -20,8 +20,8 @@ http = :8000
 
 [base]
 # chdir to the folder of this config file, plus app/website
-chdir = %dSanHui/
+chdir = %dLighten/
 # load the module from wsgi.py, it is a python path from 
 # the directory above.
-module=SanHui.wsgi:application
+module=Lighten.wsgi:application
 chmod-socket=666
